Sidebar no longer scrolls, no white boxes visible!

--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -6,7 +6,8 @@
 }
 
 #sidebar {
-    height: 100vh;
+    min-height: 100vh;
+    height: 100%;
     width: 300px;
     background-color: $color-secondary;
     @media (max-width: 768px) {
@@ -23,4 +24,5 @@
     }
 
     padding: 0;
+    overflow-y: auto;
 }
