--- a/src/app/sidebar/sidebar.component.scss
+++ b/src/app/sidebar/sidebar.component.scss
@@ -29,10 +29,10 @@ img {
     padding: 10px;
     width: 100px;
 
-    // position: absolute;
-    // left: 35px;
-    // bottom: 0px;
-    // justify-content: center;
+    position: absolute;
+    left: 35px;
+    bottom: 0px;
+    justify-content: center;
 }
 
 .logoutButton:hover {
